# src/routes/organization.route.ts
@@ -1,4 +1,5 @@
 import { create } from "@/controllers/organization/create";
+import { deleteById } from "@/controllers/organization/delete";
 import { getById } from "@/controllers/organization/get-by-id";
 import { update } from "@/controllers/organization/update";
 import { FastifyInstance } from "fastify";
@@ -32,7 +33,7 @@ const organizationSchema = {
 
 export const organizationRoutes = async (app: FastifyInstance) => {
   app.post(
-    "/organization-create",
+    "/organization",
     {
       schema: {
         description: "Creates an Organization",
@@ -110,5 +111,46 @@ export const organizationRoutes = async (app: FastifyInstance) => {
       },
     },
     update,
+  );
+
+  app.delete(
+    "/organization/:id",
+    {
+      schema: {
+        description: "Update an organization by ID",
+        tags: ["Organization"],
+        params: {
+          type: "object",
+          properties: {
+            id: { type: "string", description: "Organization id" },
+          },
+          required: ["id"],
+        },
+        body: {
+          properties: {
+            email: { type: "string", format: "email" },
+            password_hash: { type: "string", nullable: true },
+            name: { type: "string", maxLength: 255 },
+            cnpj: {
+              type: "integer",
+              minimum: 10000000000000,
+              maximum: 99999999999999,
+            },
+            whatsapp: { type: "integer" },
+            cep: { type: "integer" },
+            city: { type: "string", maxLength: 255 },
+            state: { type: "string", maxLength: 255 },
+            street: { type: "string", maxLength: 255 },
+            country: { type: "string", maxLength: 255 },
+            password: { type: "string" },
+            newPassword: { type: "string" },
+          },
+        },
+        response: {
+          204: {},
+        },
+      },
+    },
+    deleteById,
   );
 };
